削除系のAPIを定義した (#72)
* 積み上げ削除APIを定義した

* チーム削除APIを定義した

* アウトプット削除APIを定義した

* アウトプットのコメント削除APIを定義した

* make openapi

* 積み上げ削除APIのレスポンスに409を追加した

* アウトプット削除APIに409レスポンスを追加した
