# openapi.yml
@@ -91,6 +91,31 @@ paths:
         '422':
           description: バリデーションエラー
 
+  /api/v1/stacks/{stack_id}:
+    delete:
+      summary: 積み上げ削除API
+      operationId: api.v1.stacks.destroy
+      tags:
+        - Stack
+      security: []
+      parameters:
+        - name: stack_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Stacks_Stack_Id'
+      responses:
+        '204':
+          description: 成功
+        '401':
+          description: 認証エラー
+        '404':
+          description: 積み上げが存在しない
+        '409':
+          description: 積み上げ者以外は削除できない
+        '422':
+          description: バリデーションエラー
+
   /api/v1/stacks/{stack_id}/introspection:
     get:
       summary: 積み上げの反省詳細API
@@ -473,6 +498,29 @@ paths:
           description: チーム名が重複している/管理者ではない
         '422':
           description: バリデーションエラー
+    delete:
+      summary: チーム削除API
+      operationId: api.v1.teams.destroy
+      tags:
+        - Team
+      security: []
+      parameters:
+        - name: team_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Teams_Team_Id'
+      responses:
+        '204':
+          description: 成功
+        '401':
+          description: 認証エラー
+        '404':
+          description: チームが存在しない
+        '409':
+          description: 管理者ではない
+        '422':
+          description: バリデーションエラー
   /api/v1/teams/{team_id}/stack_ranking:
     get:
       summary: チーム内積み上げ時間ランキング
@@ -596,6 +644,29 @@ paths:
           description: アウトプットが存在しない
         '422':
           description: バリデーションエラー
+    delete:
+      summary: アウトプット削除API
+      operationId: api.v1.outputs.destroy
+      tags:
+        - Output
+      security: []
+      parameters:
+        - name: output_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Outputs_Output_Id'
+      responses:
+        '204':
+          description: 成功
+        '401':
+          description: 認証エラー
+        '404':
+          description: アウトプットが存在しない
+        '409':
+          description: アウトプット者以外は削除できない
+        '422':
+          description: バリデーションエラー
 
   /api/v1/outputs/{output_id}/comments:
     get:
@@ -652,6 +723,36 @@ paths:
           description: 認証エラー
         '404':
           description: アウトプットが存在しない
+        '422':
+          description: バリデーションエラー
+
+  /api/v1/outputs/{output_id}/comments/{output_comment_id}:
+    delete:
+      summary: アウトプットのコメント削除API
+      operationId: api.v1.outputs.comments.destroy
+      tags:
+        - OutputComment
+      security: []
+      parameters:
+        - name: output_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Outputs_Output_Id'
+        - name: output_comment_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/Outputs_Comments_Comment_Id'
+      responses:
+        '204':
+          description: 成功
+        '401':
+          description: 認証エラー
+        '404':
+          description: アウトプットが存在しない/アウトプットのコメントが存在しない
+        '409':
+          description: コメント者以外は削除できない
         '422':
           description: バリデーションエラー
 
